--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,1 +1,25 @@
+.homepage-nadpis {
+  margin-top: 350px;
+  color: #42d0ff;
+  text-align: center;
+  font-size: 4rem;
+}
 
+.login__btn {
+  margin-left: 100rem;
+  padding-top: 3rem;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.register__btn {
+  margin-left: 2rem;
+  font-size: 24px;
+  text-decoration: none;
+}
+
+.login-register-btn {
+  margin-top: 2rem;
+}
+
+/*# sourceMappingURL=app.css.map*/
