--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -2,6 +2,7 @@
 @import "loginpage/loginpage.scss";
 @import "registerpage/registerpage.scss";
 @import "navigation/navigation.scss";
+@import "approval/approval.scss";
 
 table {
     width: 50%;
