--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -3,6 +3,10 @@
 @import "registerpage/registerpage.scss";
 @import "navigation/navigation.scss";
 @import "approval/approval.scss";
+@import "dashboard/dashboard.scss";
+@import "history/history.scss";
+@import "deposits/deposits.scss";
+@import "withdrawals/withdrawals.scss";
 
 table {
     width: 50%;
