--- a/resources/css/loginpage/loginpage.scss
+++ b/resources/css/loginpage/loginpage.scss
@@ -24,7 +24,7 @@
 
 .login-button {
     width: 172px;
-    border: 1px solid white;
+    border: 1px solid snow;
     border-radius: 10px;
     padding: 2% 20%;
     background-color: #00a7e1;
@@ -33,13 +33,25 @@
     font-size: 14px;
 }
 
+.login-button:hover {
+    background-color: snow;
+    color: #00a7e1;
+}
+
 .login-form a {
     color: snow;
     text-decoration: none;
     font-size: 12px;
 }
 
-input {
+.email-input {
+    border: 1px solid snow;
+    border-radius: 10px;
+    padding: 2%;
+    margin-top: 5px;
+}
+
+.password-input {
     border: 1px solid snow;
     border-radius: 10px;
     padding: 2%;
