--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -7,6 +7,9 @@
 @import "history/history.scss";
 @import "deposits/deposits.scss";
 @import "withdrawals/withdrawals.scss";
+@import "about/about.scss";
+@import "cryptoDerivatives/cryptoDerivatives.scss";
+@import "footer/footer.scss";
 
 table {
     width: 50%;
