--- a/resources/css/history/history.scss
+++ b/resources/css/history/history.scss
@@ -1,8 +1,8 @@
 .wrapper-history {
     display: flex;
     justify-content: center;
-    align-items: center;
     width: 100%;
+    min-height: 100vh;
 }
 
 .history_section {
