--- a/public/css/app.css
+++ b/public/css/app.css
@@ -254,8 +254,8 @@
 .wrapper-history {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100%;
+  min-height: 100vh;
 }
 
 .history_section {
@@ -280,8 +280,8 @@
 .wrapper_deposits {
   display: flex;
   justify-content: center;
-  align-items: center;
   width: 100%;
+  min-height: 100vh;
 }
 
 .deposits_section {
@@ -289,16 +289,41 @@
   margin-top: 3rem;
 }
 
+.deposit-input {
+  border: 1px solid #00a7e1;
+  border-radius: 5px;
+  padding: 0.7%;
+}
+
+.deposit-button {
+  color: #00a7e1;
+  background-color: snow;
+  padding: 0.7%;
+  border-radius: 5px;
+  border: 1px solid #00a7e1;
+  cursor: pointer;
+}
+
+.deposit-button:hover {
+  color: snow;
+  background-color: #00a7e1;
+}
+
 .wrapper-withdrawals {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   width: 100%;
+  min-height: 100vh;
 }
 
 .withdrawals_section {
   width: 69%;
   margin-top: 3rem;
+}
+
+.withdrawals_content {
+  width: 69%;
 }
 
 .wrapper-about {
