--- a/resources/css/withdrawals/withdrawals.scss
+++ b/resources/css/withdrawals/withdrawals.scss
@@ -1,11 +1,16 @@
 .wrapper-withdrawals {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     width: 100%;
+    min-height: 100vh;
 }
 
 .withdrawals_section {
     width: 69%;
     margin-top: 3rem;
+}
+
+.withdrawals_content {
+    width: 69%;
 }
