--- a/resources/css/deposits/deposits.scss
+++ b/resources/css/deposits/deposits.scss
@@ -2,12 +2,13 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    min-height: 100vh;
+    min-height: 70vh;
 }
 
 .deposits_section {
     width: 69%;
     margin-top: 3rem;
+    background-color: orangered;
 }
 
 .deposit-input {
