--- a/resources/css/registerpage/registerpage.scss
+++ b/resources/css/registerpage/registerpage.scss
@@ -36,6 +36,12 @@
     color: #00a7e1;
 }
 
+.registration-form a {
+    color: snow;
+    text-decoration: none;
+    font-size: 12px;
+}
+
 // .registration-form {
 //     display: flex;
 //     justify-content: center;
