--- a/resources/css/dashboard/dashboard.scss
+++ b/resources/css/dashboard/dashboard.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    background-color: rgb(72, 72, 72);
 }
 
 .dashboard_section {
@@ -22,4 +23,14 @@
 .invest-btn:hover {
     background-color: #00a7e1;
     color: snow;
+}
+
+.chart {
+    background-color: rgb(42, 42, 42);
+    padding: 2%;
+    border-radius: 20px;
+    box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    margin-bottom: 5rem;
 }
