--- a/resources/css/history/history.scss
+++ b/resources/css/history/history.scss
@@ -3,11 +3,13 @@
     justify-content: center;
     width: 100%;
     min-height: 100vh;
+    background-color: rgb(72, 72, 72);
 }
 
 .history_section {
     width: 69%;
     margin-top: 3rem;
+    color: snow;
 }
 
 .history_section h3 {
@@ -17,9 +19,49 @@
 .deposits-table {
     margin: 0;
     width: 100%;
+    background-color: rgb(90, 90, 90);
+    border-collapse: collapse;
+    tr:nth-child(even) {
+        background-color: rgb(52, 52, 52);
+    }
 }
 
 .withdrawals-table {
     margin: 0;
     width: 100%;
+    background-color: rgb(90, 90, 90);
+    border-collapse: collapse;
+    tr:nth-child(even) {
+        background-color: rgb(52, 52, 52);
+    }
+}
+
+table {
+    width: 100%;
+    border: none !important;
+}
+
+th,
+td {
+    text-align: left;
+    padding: 8px;
+    border: none !important;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+th {
+    background-color: #00a7e1;
+    color: white;
+}
+
+.deposit-table-section {
+    background-color: rgb(72, 72, 72);
+    padding: 3%;
+    border-radius: 10px;
+    box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
