--- a/resources/css/deposits/deposits.scss
+++ b/resources/css/deposits/deposits.scss
@@ -1,32 +1,44 @@
 .wrapper_deposits {
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 100%;
-    min-height: 70vh;
+    min-height: 78.8vh;
+    background-color: rgb(72, 72, 72);
+    color: snow;
 }
 
 .deposits_section {
-    width: 69%;
+    display: flex;
+    flex-direction: column;
+    padding: 1% 4%;
+    width: 12%;
     margin-top: 3rem;
-    background-color: orangered;
+    background-color: rgb(90, 90, 90);
+    border-radius: 10px;
+    height: 40vh;
+    box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
 
-.deposit-input {
-    border: 1px solid #00a7e1;
-    border-radius: 5px;
-    padding: 0.7%;
+.deposit-amount-input {
+    border: none;
+    border-radius: 10px;
+    padding: 3%;
 }
 
-.deposit-button {
-    color: #00a7e1;
-    background-color: snow;
-    padding: 0.7%;
-    border-radius: 5px;
-    border: 1px solid #00a7e1;
+.deposit-btn {
+    color: snow;
+    background-color: #00a7e1;
+    padding: 3% 21%;
+    border-radius: 10px;
+    border: none;
+    margin-top: 6%;
     cursor: pointer;
 }
 
-.deposit-button:hover {
+.deposit-btn:hover {
     color: snow;
-    background-color: #00a7e1;
+    background-color: #007ca5;
 }
