--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -13,6 +13,7 @@
 @import "footer/footer.scss";
 @import "admin/admin-transactions.scss";
 @import "admin/admin-users.scss";
+@import "my-account/my-account.scss";
 
 table {
     width: 50%;
