--- a/public/css/app.css
+++ b/public/css/app.css
@@ -332,11 +332,12 @@
 }
 
 .history_section h3 {
-  margin-top: 3rem;
+  display: inline;
+  margin-right: 2rem;
 }
 
 .deposits-table {
-  margin: 0;
+  margin-top: 1rem;
   width: 100%;
   background-color: #5a5a5a;
   border-collapse: collapse;
@@ -346,7 +347,7 @@
 }
 
 .withdrawals-table {
-  margin: 0;
+  margin-top: 1rem;
   width: 100%;
   background-color: #5a5a5a;
   border-collapse: collapse;
@@ -378,11 +379,38 @@ th {
 
 .deposit-table-section {
   background-color: #484848;
-  padding: 3%;
+  padding: 1% 3% 3% 3%;
   border-radius: 10px;
+  margin-top: 2rem;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+}
+
+.history-deposit-btn {
+  background-color: #00a7e1;
+  color: snow;
+  padding: 0.5% 4%;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.history-withdrawal-btn {
+  background-color: #00a7e1;
+  color: snow;
+  padding: 0.5% 4%;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+.history-deposit-btn:hover {
+  background-color: #007ca5;
+}
+
+.history-withdrawal-btn:hover {
+  background-color: #007ca5;
 }
 
 .wrapper_deposits {
@@ -798,6 +826,77 @@ th {
 
 .deny-btn:hover {
   background-color: #760000;
+}
+
+.my-account-body {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+  background-color: #484848;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: snow;
+}
+
+.my-account-wrapper {
+  background-color: darkred;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30%;
+  padding: 2%;
+}
+
+.container-wrapper {
+  display: flex;
+  flex-direction: flex;
+  justify-content: space-around;
+}
+
+.container {
+  background-color: green;
+}
+
+.my-account-header {
+  width: 100%;
+}
+
+.my-account-header h1 {
+  margin: 0 0 2rem 1rem;
+}
+
+.card {
+  background-color: deepskyblue;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+  font-size: 18px;
+}
+
+div.card-header {
+  font-size: 24px;
+  margin-bottom: 1rem;
+}
+
+.form-control {
+  padding: 3%;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+}
+
+.btn-primary {
+  color: snow;
+  background-color: #00a7e1;
+  padding: 4% 25%;
+  border-radius: 10px;
+  border: none;
+  margin-top: 1%;
+  cursor: pointer;
 }
 
 table {
