--- a/resources/css/history/history.scss
+++ b/resources/css/history/history.scss
@@ -13,11 +13,12 @@
 }
 
 .history_section h3 {
-    margin-top: 3rem;
+    display: inline;
+    margin-right: 2rem;
 }
 
 .deposits-table {
-    margin: 0;
+    margin-top: 1rem;
     width: 100%;
     background-color: rgb(90, 90, 90);
     border-collapse: collapse;
@@ -27,7 +28,7 @@
 }
 
 .withdrawals-table {
-    margin: 0;
+    margin-top: 1rem;
     width: 100%;
     background-color: rgb(90, 90, 90);
     border-collapse: collapse;
@@ -59,9 +60,36 @@ th {
 
 .deposit-table-section {
     background-color: rgb(72, 72, 72);
-    padding: 3%;
+    padding: 1% 3% 3% 3%;
     border-radius: 10px;
+    margin-top: 2rem;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+}
+
+.history-deposit-btn {
+    background-color: #00a7e1;
+    color: snow;
+    padding: 0.5% 4%;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.history-withdrawal-btn {
+    background-color: #00a7e1;
+    color: snow;
+    padding: 0.5% 4%;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.history-deposit-btn:hover {
+    background-color: #007ca5;
+}
+
+.history-withdrawal-btn:hover {
+    background-color: #007ca5;
 }
