--- a/public/img/Invest App_files/app.css
+++ b/public/img/Invest App_files/app.css
@@ -834,7 +834,7 @@ th {
   align-items: space-between;
   background-color: #484848;
   width: 100%;
-  height: 84vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -842,17 +842,12 @@ th {
 }
 
 .my-account-wrapper {
-  background-color: #5a5a5a;
-  border-radius: 10px;
+  background-color: darkred;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   width: 30%;
   padding: 2%;
-  margin: 4.3rem 0;
-  box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
-  -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
-  -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
 
 .container-wrapper {
@@ -861,16 +856,20 @@ th {
   justify-content: space-around;
 }
 
+.container {
+  background-color: green;
+}
+
 .my-account-header {
   width: 100%;
 }
 
 .my-account-header h1 {
-  margin: 0 0 2rem 0;
+  margin: 0 0 2rem 1rem;
 }
 
 .card {
-  width: 225px;
+  background-color: blue;
 }
 
 .form-group {
@@ -890,32 +889,14 @@ div.card-header {
   outline: none;
 }
 
-.update-btn {
+.btn-primary {
   color: snow;
   background-color: #00a7e1;
-  padding: 3% 21%;
+  padding: 4% 25%;
   border-radius: 10px;
   border: none;
   margin-top: 1%;
   cursor: pointer;
-}
-
-.save-btn {
-  color: snow;
-  background-color: #00a7e1;
-  padding: 3% 33%;
-  border-radius: 10px;
-  border: none;
-  margin-top: 1%;
-  cursor: pointer;
-}
-
-.update-btn:hover {
-  background-color: #007ca5;
-}
-
-.save-btn:hover {
-  background-color: #007ca5;
 }
 
 table {
