--- a/resources/css/my-account/my-account.scss
+++ b/resources/css/my-account/my-account.scss
@@ -4,7 +4,7 @@
     align-items: space-between;
     background-color: rgb(72, 72, 72);
     width: 100%;
-    height: 100vh;
+    height: 84vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,12 +12,17 @@
 }
 
 .my-account-wrapper {
-    background-color: darkred;
+    background-color: rgb(90, 90, 90);
+    border-radius: 10px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     width: 30%;
     padding: 2%;
+    margin: 4.3rem 0;
+    box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
 
 .container-wrapper {
@@ -27,7 +32,6 @@
 }
 
 .container {
-    background-color: green;
 }
 
 .my-account-header {
@@ -35,11 +39,11 @@
 }
 
 .my-account-header h1 {
-    margin: 0 0 2rem 1rem;
+    margin: 0 0 2rem 0;
 }
 
 .card {
-    background-color: deepskyblue;
+    width: 225px;
 }
 
 .form-group {
@@ -59,12 +63,30 @@ div.card-header {
     outline: none;
 }
 
-.btn-primary {
+.update-btn {
     color: snow;
     background-color: #00a7e1;
-    padding: 4% 25%;
+    padding: 3% 21%;
     border-radius: 10px;
     border: none;
     margin-top: 1%;
     cursor: pointer;
+}
+
+.save-btn {
+    color: snow;
+    background-color: #00a7e1;
+    padding: 3% 33%;
+    border-radius: 10px;
+    border: none;
+    margin-top: 1%;
+    cursor: pointer;
+}
+
+.update-btn:hover {
+    background-color: #007ca5;
+}
+
+.save-btn:hover {
+    background-color: #007ca5;
 }
