--- a/public/css/app.css
+++ b/public/css/app.css
@@ -426,12 +426,13 @@ th {
 .deposits_section {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding: 1% 4%;
-  width: 12%;
+  width: 200px;
   margin-top: 3rem;
   background-color: #5a5a5a;
   border-radius: 10px;
-  height: 40vh;
+  height: 30vh;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -446,7 +447,7 @@ th {
 .deposit-btn {
   color: snow;
   background-color: #00a7e1;
-  padding: 3% 21%;
+  padding: 7px 38px;
   border-radius: 10px;
   border: none;
   margin-top: 6%;
@@ -469,16 +470,10 @@ th {
   color: snow;
 }
 
-.withdrawals_section {
-  width: 69%;
-  margin-top: 3rem;
-  background-color: darkkhaki;
-}
-
 .withdrawals_content {
   display: flex;
   justify-content: space-around;
-  width: 40%;
+  width: 600px;
   background-color: #5a5a5a;
   border-radius: 10px;
   padding: 1% 4%;
@@ -834,7 +829,7 @@ th {
   align-items: space-between;
   background-color: #484848;
   width: 100%;
-  height: 84vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -847,7 +842,7 @@ th {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 30%;
+  width: 500px;
   padding: 2%;
   margin: 4.3rem 0;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
