--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -14,6 +14,7 @@
 @import "admin/admin-transactions.scss";
 @import "admin/admin-users.scss";
 @import "my-account/my-account.scss";
+@import "loader/loader.scss";
 
 table {
     width: 50%;
