--- a/resources/css/deposits/deposits.scss
+++ b/resources/css/deposits/deposits.scss
@@ -11,12 +11,13 @@
 .deposits_section {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 1% 4%;
-    width: 12%;
+    width: 200px;
     margin-top: 3rem;
     background-color: rgb(90, 90, 90);
     border-radius: 10px;
-    height: 40vh;
+    height: 30vh;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -31,7 +32,7 @@
 .deposit-btn {
     color: snow;
     background-color: #00a7e1;
-    padding: 3% 21%;
+    padding: 7px 38px;
     border-radius: 10px;
     border: none;
     margin-top: 6%;
