--- a/resources/css/my-account/my-account.scss
+++ b/resources/css/my-account/my-account.scss
@@ -4,7 +4,7 @@
     align-items: space-between;
     background-color: rgb(72, 72, 72);
     width: 100%;
-    height: 84vh;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 30%;
+    width: 500px;
     padding: 2%;
     margin: 4.3rem 0;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
