--- a/resources/css/withdrawals/withdrawals.scss
+++ b/resources/css/withdrawals/withdrawals.scss
@@ -17,16 +17,10 @@
     color: snow;
 }
 
-.withdrawals_section {
-    width: 69%;
-    margin-top: 3rem;
-    background-color: darkkhaki;
-}
-
 .withdrawals_content {
     display: flex;
     justify-content: space-around;
-    width: 40%;
+    width: 600px;
     background-color: rgb(90, 90, 90);
     border-radius: 10px;
     padding: 1% 4%;
