--- a/resources/css/dashboard/dashboard.scss
+++ b/resources/css/dashboard/dashboard.scss
@@ -6,6 +6,16 @@
     background-color: rgb(72, 72, 72);
 }
 
+.dashboard-overview-section {
+    height: 200px;
+    width: 600px;
+    background-color: rgb(42, 42, 42);
+    box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    border-radius: 10px;
+}
+
 .dashboard_section {
     width: 69%;
     margin-top: 3rem;
@@ -28,7 +38,7 @@
 .chart {
     background-color: rgb(42, 42, 42);
     padding: 2%;
-    border-radius: 20px;
+    border-radius: 10px;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
