--- a/public/css/app.css
+++ b/public/css/app.css
@@ -288,6 +288,16 @@
   background-color: #484848;
 }
 
+.dashboard-overview-section {
+  height: 200px;
+  width: 600px;
+  background-color: #2a2a2a;
+  box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+  -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+  -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+  border-radius: 10px;
+}
+
 .dashboard_section {
   width: 69%;
   margin-top: 3rem;
@@ -310,7 +320,7 @@
 .chart {
   background-color: #2a2a2a;
   padding: 2%;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -911,6 +921,30 @@ div.card-header {
 
 .save-btn:hover {
   background-color: #007ca5;
+}
+
+.parent-switch .toggle-parent .toggle-input:checked ~ .type.pm {
+  color: #ffffff;
+}
+
+.matrix-canvas-1 {
+  width: 550px;
+  height: 300px;
+}
+
+.parent-loader {
+  background-color: #1f1f1f;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  width: 100vw;
+  height: 100vh;
 }
 
 table {
