--- a/resources/css/my-account/my-account.scss
+++ b/resources/css/my-account/my-account.scss
@@ -11,6 +11,10 @@
     color: snow;
 }
 
+.label {
+    font-size: 16px;
+}
+
 .my-account-wrapper {
     background-color: rgb(90, 90, 90);
     border-radius: 10px;
