--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,17 +56,21 @@
 }
 
 .login-body {
-  background-color: snow;
+  background-image: url("/img/home-bg.jpg");
   display: flex;
   height: 97vh;
   justify-content: center;
   align-items: center;
   font-family: "Rubik", sans-serif;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .login-form {
-  background-color: #00a7e1;
-  padding: 5% 20%;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 5% 8%;
   color: snow;
   border-radius: 5px;
 }
@@ -91,8 +95,7 @@
 }
 
 .login-button:hover {
-  background-color: snow;
-  color: #00a7e1;
+  background-color: #007ca5;
 }
 
 .login-form a {
@@ -106,6 +109,7 @@
   border-radius: 5px;
   padding: 2%;
   margin-top: 5px;
+  outline: none;
 }
 
 .password-input {
@@ -117,16 +121,20 @@
 
 .regitration-body {
   align-items: center;
-  background-color: snow;
+  background-image: url("/img/home-bg.jpg");
   display: flex;
   font-family: "Rubik", sans-serif;
   height: 97vh;
   justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
 }
 
 .registration-form {
-  background-color: #00a7e1;
-  padding: 5% 20%;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding: 5% 8%;
   color: snow;
   border-radius: 5px;
 }
@@ -135,6 +143,7 @@
   border: 1px solid #00a7e1;
   border-radius: 5px;
   padding: 2%;
+  outline: none;
 }
 
 .register-button {
@@ -149,8 +158,7 @@
 }
 
 .register-button:hover {
-  background-color: snow;
-  color: #00a7e1;
+  background-color: #007ca5;
 }
 
 .registration-form a {
@@ -266,14 +274,27 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 78.8vh;
+  background-color: #484848;
 }
 
 .approval_section {
   width: 69%;
+  padding: 2%;
+  border-radius: 10px;
+  background-color: #5a5a5a;
+  box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+  -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+  -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
 
 .wrapper_approval h1 {
   margin-top: 3rem;
+  color: snow;
+}
+
+p {
+  color: snow;
 }
 
 .wrapper_approval h2 {
@@ -288,14 +309,34 @@
   background-color: #484848;
 }
 
+.wrapper_dashboard h1 {
+  color: snow;
+}
+
 .dashboard-overview-section {
-  height: 200px;
-  width: 600px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  height: 90px;
+  width: 100%;
   background-color: #2a2a2a;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   border-radius: 10px;
+}
+
+.investor-values {
+  display: flex;
+}
+
+.investor-values h3 {
+  margin-right: 50px;
+}
+
+.dashboard-overview-section h3 {
+  font-weight: 400;
 }
 
 .dashboard_section {
@@ -304,16 +345,21 @@
 }
 
 .invest-btn {
-  border: 1px solid #00a7e1;
-  border-radius: 20px;
-  padding: 5px 20px;
-  background-color: snow;
-  color: #00a7e1;
-  font-size: 24px;
+  background-color: #00a7e1;
+  color: snow;
+  border-radius: 10px;
+  height: 30px;
+  border: none;
+  padding: 5px 25px;
+  font-size: 20px;
 }
 
 .invest-btn:hover {
-  background-color: #00a7e1;
+  background-color: #007ca5;
+}
+
+.invest-btn a {
+  text-decoration: none;
   color: snow;
 }
 
@@ -344,6 +390,12 @@
 .history_section h3 {
   display: inline;
   margin-right: 2rem;
+}
+
+.history-deposits-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .deposits-table {
@@ -400,7 +452,7 @@ th {
 .history-deposit-btn {
   background-color: #00a7e1;
   color: snow;
-  padding: 0.5% 4%;
+  padding: 7px 25px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -409,7 +461,7 @@ th {
 .history-withdrawal-btn {
   background-color: #00a7e1;
   color: snow;
-  padding: 0.5% 4%;
+  padding: 7px 25px;
   border: none;
   border-radius: 10px;
   cursor: pointer;
@@ -433,16 +485,16 @@ th {
   color: snow;
 }
 
-.deposits_section {
+.deposits_content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 1% 4%;
+  padding: 2% 4%;
   width: 200px;
-  margin-top: 3rem;
   background-color: #5a5a5a;
   border-radius: 10px;
-  height: 30vh;
+  height: 70vh;
+  margin: 3rem 0;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -452,21 +504,27 @@ th {
   border: none;
   border-radius: 10px;
   padding: 3%;
+  outline: none;
 }
 
 .deposit-btn {
   color: snow;
   background-color: #00a7e1;
-  padding: 7px 38px;
+  padding: 7px 32px;
   border-radius: 10px;
   border: none;
   margin-top: 6%;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .deposit-btn:hover {
   color: snow;
   background-color: #007ca5;
+}
+
+.alert-success {
+  color: #2ff82f;
 }
 
 .wrapper-withdrawals {
@@ -483,10 +541,11 @@ th {
 .withdrawals_content {
   display: flex;
   justify-content: space-around;
-  width: 600px;
+  width: 250px;
+  height: 30vh;
   background-color: #5a5a5a;
   border-radius: 10px;
-  padding: 1% 4%;
+  padding: 3% 4%;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -496,33 +555,23 @@ th {
   border: none;
   border-radius: 10px;
   padding: 3%;
+  outline: none;
 }
 
 .withdrawal-btn {
   color: snow;
   background-color: #00a7e1;
-  padding: 4% 17%;
+  padding: 7px 17px;
   border-radius: 10px;
   border: none;
   margin-top: 1%;
   cursor: pointer;
+  font-size: 16px;
 }
 
 .withdrawal-btn:hover {
   color: snow;
   background-color: #007ca5;
-}
-
-.withdrawal-image {
-  background-image: url("/img/withdrawal-form.jpg");
-  height: 55vh;
-  width: 60%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  margin: 5% 0 5% 5%;
-  border-radius: 10px;
 }
 
 .wrapper-about {
@@ -531,11 +580,13 @@ th {
   justify-content: center;
   align-items: center;
   width: 100%;
+  background-color: #484848;
 }
 
 .about_section {
   width: 69%;
   margin-top: 3rem;
+  color: snow;
 }
 
 .about-our-team {
@@ -565,12 +616,27 @@ th {
 }
 
 .team-member-info {
+  background-color: #5a5a5a;
   width: 25%;
   line-height: 1.4;
+  border-radius: 10px;
+  margin-bottom: 5rem;
   letter-spacing: 0.1rem;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+}
+
+.team-member-info h4 {
+  background-color: snow;
+  width: 100%;
+  padding: 1rem 0;
+  margin: 0;
+}
+
+.card-text {
+  padding: 10px;
+  margin-top: 0;
 }
 
 .wrapper-cryptoDerivatives {
@@ -844,6 +910,10 @@ th {
   flex-direction: column;
   align-items: center;
   color: snow;
+}
+
+.label {
+  font-size: 16px;
 }
 
 .my-account-wrapper {
