--- a/resources/css/approval/approval.scss
+++ b/resources/css/approval/approval.scss
@@ -3,14 +3,27 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 78.8vh;
+    background-color: rgb(72, 72, 72);
 }
 
 .approval_section {
     width: 69%;
+    padding: 2%;
+    border-radius: 10px;
+    background-color: rgb(90, 90, 90);
+    box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
+    -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
 
 .wrapper_approval h1 {
     margin-top: 3rem;
+    color: snow;
+}
+
+p {
+    color: snow;
 }
 
 .wrapper_approval h2 {
