--- a/resources/css/dashboard/dashboard.scss
+++ b/resources/css/dashboard/dashboard.scss
@@ -6,14 +6,34 @@
     background-color: rgb(72, 72, 72);
 }
 
+.wrapper_dashboard h1 {
+    color: snow;
+}
+
 .dashboard-overview-section {
-    height: 200px;
-    width: 600px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: white;
+    height: 90px;
+    width: 100%;
     background-color: rgb(42, 42, 42);
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     border-radius: 10px;
+}
+
+.investor-values {
+    display: flex;
+}
+
+.investor-values h3 {
+    margin-right: 50px;
+}
+
+.dashboard-overview-section h3 {
+    font-weight: 400;
 }
 
 .dashboard_section {
@@ -22,16 +42,21 @@
 }
 
 .invest-btn {
-    border: 1px solid #00a7e1;
-    border-radius: 20px;
-    padding: 5px 20px;
-    background-color: snow;
-    color: #00a7e1;
-    font-size: 24px;
+    background-color: #00a7e1;
+    color: snow;
+    border-radius: 10px;
+    height: 30px;
+    border: none;
+    padding: 5px 25px;
+    font-size: 20px;
 }
 
 .invest-btn:hover {
-    background-color: #00a7e1;
+    background-color: #007ca5;
+}
+
+.invest-btn a {
+    text-decoration: none;
     color: snow;
 }
 
