--- a/resources/css/deposits/deposits.scss
+++ b/resources/css/deposits/deposits.scss
@@ -8,16 +8,16 @@
     color: snow;
 }
 
-.deposits_section {
+.deposits_content {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1% 4%;
+    padding: 2% 4%;
     width: 200px;
-    margin-top: 3rem;
     background-color: rgb(90, 90, 90);
     border-radius: 10px;
-    height: 30vh;
+    height: 70vh;
+    margin: 3rem 0;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -27,19 +27,25 @@
     border: none;
     border-radius: 10px;
     padding: 3%;
+    outline: none;
 }
 
 .deposit-btn {
     color: snow;
     background-color: #00a7e1;
-    padding: 7px 38px;
+    padding: 7px 32px;
     border-radius: 10px;
     border: none;
     margin-top: 6%;
     cursor: pointer;
+    font-size: 16px;
 }
 
 .deposit-btn:hover {
     color: snow;
     background-color: #007ca5;
+}
+
+.alert-success {
+    color: rgb(47, 248, 47);
 }
