--- a/resources/css/withdrawals/withdrawals.scss
+++ b/resources/css/withdrawals/withdrawals.scss
@@ -20,10 +20,11 @@
 .withdrawals_content {
     display: flex;
     justify-content: space-around;
-    width: 600px;
+    width: 250px;
+    height: 30vh;
     background-color: rgb(90, 90, 90);
     border-radius: 10px;
-    padding: 1% 4%;
+    padding: 3% 4%;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -33,31 +34,21 @@
     border: none;
     border-radius: 10px;
     padding: 3%;
+    outline: none;
 }
 
 .withdrawal-btn {
     color: snow;
     background-color: #00a7e1;
-    padding: 4% 17%;
+    padding: 7px 17px;
     border-radius: 10px;
     border: none;
     margin-top: 1%;
     cursor: pointer;
+    font-size: 16px;
 }
 
 .withdrawal-btn:hover {
     color: snow;
     background-color: #007ca5;
-}
-
-.withdrawal-image {
-    background-image: url("/img/withdrawal-form.jpg");
-    height: 55vh;
-    width: 60%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-    margin: 5% 0 5% 5%;
-    border-radius: 10px;
 }
