--- a/resources/css/deposits/deposits.scss
+++ b/resources/css/deposits/deposits.scss
@@ -23,6 +23,17 @@
     -moz-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+    -moz-appearance: textfield;
+}
+
 .deposit-amount-input {
     border: none;
     border-radius: 10px;
