--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,7 +24,7 @@
   align-items: center;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.5);
-  height: 77vh;
+  min-height: 100vh;
 }
 
 .body {
@@ -39,7 +39,7 @@
 .intro-page {
   overflow: hidden;
   background-image: url("/img/home-bg.jpg");
-  height: 76.7vh;
+  min-height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -440,7 +440,7 @@ th {
 }
 
 .deposit-table-section {
-  background-color: #484848;
+  background-color: #2a2a2a;
   padding: 1% 3% 3% 3%;
   border-radius: 10px;
   margin-top: 2rem;
@@ -491,7 +491,7 @@ th {
   align-items: center;
   padding: 2% 4%;
   width: 200px;
-  background-color: #5a5a5a;
+  background-color: #2a2a2a;
   border-radius: 10px;
   height: 70vh;
   margin: 3rem 0;
@@ -554,7 +554,7 @@ input[type=number] {
   justify-content: space-around;
   width: 250px;
   height: 30vh;
-  background-color: #5a5a5a;
+  background-color: #2a2a2a;
   border-radius: 10px;
   padding: 3% 4%;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -788,7 +788,7 @@ table {
   width: 69%;
 }
 
-.complete-btn {
+.accept-btn {
   background-color: #0a7500;
   color: snow;
   border-radius: 10px;
@@ -798,7 +798,7 @@ table {
   cursor: pointer;
 }
 
-.complete-btn:hover {
+.accept-btn:hover {
   background-color: #085b00;
 }
 
@@ -807,7 +807,7 @@ table {
   color: snow;
   border-radius: 10px;
   border: none;
-  padding: 13% 20%;
+  padding: 10% 20%;
   margin: 0 30px 0 20px;
   cursor: pointer;
 }
@@ -887,7 +887,7 @@ th {
   color: snow;
   border-radius: 10px;
   border: none;
-  padding: 12% 20%;
+  padding: 10% 20%;
   margin: 0 30px 0 20px;
   cursor: pointer;
 }
@@ -901,7 +901,7 @@ th {
   color: snow;
   border-radius: 10px;
   border: none;
-  padding: 13% 20%;
+  padding: 10% 20%;
   margin: 0 30px 0 20px;
   cursor: pointer;
 }
@@ -928,7 +928,7 @@ th {
 }
 
 .my-account-wrapper {
-  background-color: #5a5a5a;
+  background-color: #2a2a2a;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -1054,6 +1054,14 @@ td {
   display: flex;
   width: 50%;
   margin: auto;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
 }
 
 /*# sourceMappingURL=app.css.map*/
