--- a/resources/css/homepage/homepage.scss
+++ b/resources/css/homepage/homepage.scss
@@ -24,7 +24,7 @@
     align-items: center;
     width: 100vw;
     background-color: rgba(0, 0, 0, 0.5);
-    height: 77vh;
+    min-height: 100vh;
 }
 
 .body {
@@ -39,7 +39,7 @@
 .intro-page {
     overflow: hidden;
     background-image: url("/img/home-bg.jpg");
-    height: 76.7vh;
+    min-height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
