--- a/public/css/app.css
+++ b/public/css/app.css
@@ -788,7 +788,7 @@ table {
   width: 69%;
 }
 
-.complete-btn {
+.accept-btn {
   background-color: #0a7500;
   color: snow;
   border-radius: 10px;
@@ -798,7 +798,7 @@ table {
   cursor: pointer;
 }
 
-.complete-btn:hover {
+.accept-btn:hover {
   background-color: #085b00;
 }
 
@@ -807,7 +807,7 @@ table {
   color: snow;
   border-radius: 10px;
   border: none;
-  padding: 13% 20%;
+  padding: 10% 20%;
   margin: 0 30px 0 20px;
   cursor: pointer;
 }
@@ -887,7 +887,7 @@ th {
   color: snow;
   border-radius: 10px;
   border: none;
-  padding: 12% 20%;
+  padding: 10% 20%;
   margin: 0 30px 0 20px;
   cursor: pointer;
 }
@@ -901,7 +901,7 @@ th {
   color: snow;
   border-radius: 10px;
   border: none;
-  padding: 13% 20%;
+  padding: 10% 20%;
   margin: 0 30px 0 20px;
   cursor: pointer;
 }
@@ -1026,6 +1026,16 @@ div.card-header {
   flex-direction: row;
   width: 100vw;
   height: 100vh;
+}
+
+.body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content-wrapper {
+  flex-grow: 1;
 }
 
 table {
