--- a/public/css/app.css
+++ b/public/css/app.css
@@ -490,10 +490,10 @@ th {
   flex-direction: column;
   align-items: center;
   padding: 2% 4%;
-  width: 200px;
+  width: 300px;
   background-color: #2a2a2a;
   border-radius: 10px;
-  height: 70vh;
+  height: 550px;
   margin: 3rem 0;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
   -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -552,8 +552,8 @@ input[type=number] {
 .withdrawals_content {
   display: flex;
   justify-content: space-around;
-  width: 250px;
-  height: 30vh;
+  width: 300px;
+  height: 300px;
   background-color: #2a2a2a;
   border-radius: 10px;
   padding: 3% 4%;
@@ -627,7 +627,7 @@ input[type=number] {
 }
 
 .team-member-info {
-  background-color: #5a5a5a;
+  background-color: #2a2a2a;
   width: 25%;
   line-height: 1.4;
   border-radius: 10px;
@@ -757,7 +757,7 @@ input[type=number] {
   padding: 3%;
   margin: 0.5rem 0 2rem 0;
   width: 63.2%;
-  background-color: #484848;
+  background-color: #2a2a2a;
   border-collapse: collapse;
   border-radius: 10px;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -839,7 +839,7 @@ table {
   margin: 0;
   padding: 3%;
   width: 63.2%;
-  background-color: #484848;
+  background-color: #2a2a2a;
   border-collapse: collapse;
   border-radius: 10px;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -933,7 +933,7 @@ th {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  width: 500px;
+  width: 600px;
   padding: 2%;
   margin: 4.3rem 0;
   box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
