--- a/resources/css/deposits/deposits.scss
+++ b/resources/css/deposits/deposits.scss
@@ -13,10 +13,10 @@
     flex-direction: column;
     align-items: center;
     padding: 2% 4%;
-    width: 200px;
+    width: 300px;
     background-color: rgb(42, 42, 42);
     border-radius: 10px;
-    height: 70vh;
+    height: 550px;
     margin: 3rem 0;
     box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
     -webkit-box-shadow: -1px 2px 8px 1px rgba(0, 0, 0, 0.65);
@@ -59,4 +59,7 @@ input[type="number"] {
 
 .alert-success {
     color: rgb(47, 248, 47);
+}
+
+.form-section {
 }
