--- a/resources/css/withdrawals/withdrawals.scss
+++ b/resources/css/withdrawals/withdrawals.scss
@@ -20,8 +20,8 @@
 .withdrawals_content {
     display: flex;
     justify-content: space-around;
-    width: 250px;
-    height: 30vh;
+    width: 300px;
+    height: 300px;
     background-color: rgb(42, 42, 42);
     border-radius: 10px;
     padding: 3% 4%;
